Update html document files.

--- a/_udas_doc.html
+++ b/_udas_doc.html
@@ -12,7 +12,7 @@ This page was created by the IDL library routine
 <CODE>mk_html_help2</CODE>.
 <br>
 <P>
-<STRONG>Last modified: </STRONG>Thu Jun 16 11:10:56 2011.<P>
+<STRONG>Last modified: </STRONG>Tue Jun 28 13:02:22 2011.<P>
  
 <HR>
  
@@ -69,6 +69,8 @@ FILE_HTTP_COPY_IUG</A>
 FILE_RETRIEVE_IUG</A>
 <br>This procedure is the modified version of file_retrieve in tdas_6_00 for IUGONET data.
 <A NAME="LIST_G">
+<LI><A HREF="iugonet/erg_ground/radar/superdarn_udas_doc_list.html#
+GET_FIXED_PIXEL_GRAPH">GET_FIXED_PIXEL_GRAPH</A>
 <LI><A HREF="iugonet/erg_ground/radar/superdarn_udas_doc_list.html#GET_SPHCNTR">
 GET_SPHCNTR</A>
 <LI><A HREF="iugonet/gui_udas_doc_list.html#GUI_LOAD_ACKNOWLEDGEMENT">
@@ -195,12 +197,12 @@ IUG_LOAD_MU_TROP_TXT</A>
 LOADCT_SD</A>
 <A NAME="LIST_O">
 <LI><A HREF="iugonet/erg_ground/radar/superdarn_udas_doc_list.html#
-OVERLAY_POLAR_COAST">OVERLAY_POLAR_COAST</A>
+OVERLAY_MAP_COAST">OVERLAY_MAP_COAST</A>
 <LI><A HREF="iugonet/erg_ground/radar/superdarn_udas_doc_list.html#
-OVERLAY_POLAR_SDFIT">OVERLAY_POLAR_SDFIT</A>
+OVERLAY_MAP_SDFIT">OVERLAY_MAP_SDFIT</A>
 <A NAME="LIST_P">
 <LI><A HREF="iugonet/erg_ground/radar/superdarn_udas_doc_list.html#
-PLOT_POLAR_SDFIT">PLOT_POLAR_SDFIT</A>
+PLOT_MAP_SDFIT">PLOT_MAP_SDFIT</A>
 <br>Draw a fan plot of SD data on the world map
 <A NAME="LIST_S">
 <LI><A HREF="iugonet/erg_ground/radar/superdarn_udas_doc_list.html#SD_AACGMLIB">
