--- a/iugonet/erg_ground/radar/superdarn_udas_doc_list.html
+++ b/iugonet/erg_ground/radar/superdarn_udas_doc_list.html
@@ -11,7 +11,7 @@ This page was created by the IDL library routine
 <CODE>mk_html_help2</CODE>.
 <br>
 <P>
-<STRONG>Last modified: </STRONG>Thu Jun 16 11:10:56 2011.<P>
+<STRONG>Last modified: </STRONG>Tue Jun 28 13:02:22 2011.<P>
  
 <HR>
  
@@ -21,11 +21,12 @@ This page was created by the IDL library routine
 <H1>iugonet/erg_ground/radar/superdarn</H1>
 <LI><A HREF="#ERG_LOAD_SDFIT">ERG_LOAD_SDFIT</A>
 <br>Load fitacf CDF files of SuperDARN as tplot variables.
+<LI><A HREF="#GET_FIXED_PIXEL_GRAPH">GET_FIXED_PIXEL_GRAPH</A>
 <LI><A HREF="#GET_SPHCNTR">GET_SPHCNTR</A>
 <LI><A HREF="#LOADCT_SD">LOADCT_SD</A>
-<LI><A HREF="#OVERLAY_POLAR_COAST">OVERLAY_POLAR_COAST</A>
-<LI><A HREF="#OVERLAY_POLAR_SDFIT">OVERLAY_POLAR_SDFIT</A>
-<LI><A HREF="#PLOT_POLAR_SDFIT">PLOT_POLAR_SDFIT</A>
+<LI><A HREF="#OVERLAY_MAP_COAST">OVERLAY_MAP_COAST</A>
+<LI><A HREF="#OVERLAY_MAP_SDFIT">OVERLAY_MAP_SDFIT</A>
+<LI><A HREF="#PLOT_MAP_SDFIT">PLOT_MAP_SDFIT</A>
 <br>Draw a fan plot of SD data on the world map
 <LI><A HREF="#SD_AACGMLIB">SD_AACGMLIB</A>
 <LI><A HREF="#SD_INIT">SD_INIT</A>
@@ -42,7 +43,7 @@ This page was created by the IDL library routine
 <H1>Routine Descriptions</H1>
 <A NAME="ERG_LOAD_SDFIT">
 <H2>ERG_LOAD_SDFIT</H2></A>
-<A HREF="#GET_SPHCNTR">[Next Routine]</A>
+<A HREF="#GET_FIXED_PIXEL_GRAPH">[Next Routine]</A>
 <A HREF="#ROUTINELIST">[List of Routines]</A>
 <PRE>
  PROCEDURE erg_load_sdfit
@@ -72,9 +73,46 @@ This page was created by the IDL library routine
 <STRONG>(See <A href="superdarn/erg_load_sdfit.pro">iugonet/erg_ground/radar/superdarn/erg_load_sdfit.pro</A>)</STRONG><P>
 <HR>
  
+<A NAME="GET_FIXED_PIXEL_GRAPH">
+<H2>GET_FIXED_PIXEL_GRAPH</H2></A>
+<A HREF="#ERG_LOAD_SDFIT">[Previous Routine]</A>
+<A HREF="#GET_SPHCNTR">[Next Routine]</A>
+<A HREF="#ROUTINELIST">[List of Routines]</A>
+<PRE>
+ PROCEDURE get_fixed_pixel_graph
+
+ :DESCRIPTION:
+ 	Generate a tplot variable containing data values for 
+ 	a fixed pixel, with given beam number and range gate number. 
+
+ :PARAMS:
+   vn: name of the tplot variable from which values for a fixed pixel are extracted 
+ 
+ :KEYWORDS:
+   beam: beam number for a pixel to be extracted
+   range_gate: range gate number for a pixel to be extracted
+   newvn: if a string is set, the new tplot variable is generated with a name given by this keyword
+    
+ :EXAMPLES:
+   get_fixed_pixel_graph, 'sd_hok_vlos_1', beam=3, range_gate=65
+
+ :AUTHOR:
+ 	Tomo Hori (E-mail: horit@stelab.nagoya-u.ac.jp)
+
+ :HISTORY:
+ 	2011/06/22: Created
+
+ $LastChangedBy: horit $
+ $LastChangedDate: 2011-06-23 16:33:01 +0900 (Thu, 23 Jun 2011) $
+ $LastChangedRevision: 136 $
+ $URL: http://gemsissc.stelab.nagoya-u.ac.jp/svn/ergsc/trunk/erg/ground/radar/superdarn/get_fixed_pixel_graph.pro $
+</PRE><P>
+<STRONG>(See <A href="superdarn/get_fixed_pixel_graph.pro">iugonet/erg_ground/radar/superdarn/get_fixed_pixel_graph.pro</A>)</STRONG><P>
+<HR>
+ 
 <A NAME="GET_SPHCNTR">
 <H2>GET_SPHCNTR</H2></A>
-<A HREF="#ERG_LOAD_SDFIT">[Previous Routine]</A>
+<A HREF="#GET_FIXED_PIXEL_GRAPH">[Previous Routine]</A>
 <A HREF="#LOADCT_SD">[Next Routine]</A>
 <A HREF="#ROUTINELIST">[List of Routines]</A>
 <PRE>
@@ -115,7 +153,7 @@ This page was created by the IDL library routine
 <A NAME="LOADCT_SD">
 <H2>LOADCT_SD</H2></A>
 <A HREF="#GET_SPHCNTR">[Previous Routine]</A>
-<A HREF="#OVERLAY_POLAR_COAST">[Next Routine]</A>
+<A HREF="#OVERLAY_MAP_COAST">[Next Routine]</A>
 <A HREF="#ROUTINELIST">[List of Routines]</A>
 <PRE>
  PROCEDURE loadct_sd
@@ -139,13 +177,13 @@ This page was created by the IDL library routine
 <STRONG>(See <A href="superdarn/loadct_sd.pro">iugonet/erg_ground/radar/superdarn/loadct_sd.pro</A>)</STRONG><P>
 <HR>
  
-<A NAME="OVERLAY_POLAR_COAST">
-<H2>OVERLAY_POLAR_COAST</H2></A>
+<A NAME="OVERLAY_MAP_COAST">
+<H2>OVERLAY_MAP_COAST</H2></A>
 <A HREF="#LOADCT_SD">[Previous Routine]</A>
-<A HREF="#OVERLAY_POLAR_SDFIT">[Next Routine]</A>
+<A HREF="#OVERLAY_MAP_SDFIT">[Next Routine]</A>
 <A HREF="#ROUTINELIST">[List of Routines]</A>
 <PRE>
- PROCEDURE overlay_polar_coast
+ PROCEDURE overlay_map_coast
 
  :Description:
 		Draw the world map on the plot window set up by map_set. 
@@ -163,29 +201,30 @@ This page was created by the IDL library routine
     position:  Set to draw the map at the designated position in the plot window
 
  :EXAMPLES:
-   overlay_polar_coast     (to draw the map in AACGM)
+   overlay_map_coast     (to draw the world map in AACGM)
 
  :Author:
  	Tomo Hori (E-mail: horit@stelab.nagoya-u.ac.jp)
 
  :HISTORY:
  	2011/11/10: Created
+ 	2011/06/15: renamed to overlay_map_coast
 
- $LastChangedBy: horit $
- $LastChangedDate: 2011-01-13 16:53:19 +0900 (Thu, 13 Jan 2011) $
- $LastChangedRevision: 98 $
- $URL: http://gemsissc.stelab.nagoya-u.ac.jp/svn/ergsc/trunk/erg/ground/radar/superdarn/overlay_polar_coast.pro $
+ $LastChangedBy: $
+ $LastChangedDate: $
+ $LastChangedRevision: $
+ $URL: $
 </PRE><P>
-<STRONG>(See <A href="superdarn/overlay_polar_coast.pro">iugonet/erg_ground/radar/superdarn/overlay_polar_coast.pro</A>)</STRONG><P>
+<STRONG>(See <A href="superdarn/overlay_map_coast.pro">iugonet/erg_ground/radar/superdarn/overlay_map_coast.pro</A>)</STRONG><P>
 <HR>
  
-<A NAME="OVERLAY_POLAR_SDFIT">
-<H2>OVERLAY_POLAR_SDFIT</H2></A>
-<A HREF="#OVERLAY_POLAR_COAST">[Previous Routine]</A>
-<A HREF="#PLOT_POLAR_SDFIT">[Next Routine]</A>
+<A NAME="OVERLAY_MAP_SDFIT">
+<H2>OVERLAY_MAP_SDFIT</H2></A>
+<A HREF="#OVERLAY_MAP_COAST">[Previous Routine]</A>
+<A HREF="#PLOT_MAP_SDFIT">[Next Routine]</A>
 <A HREF="#ROUTINELIST">[List of Routines]</A>
 <PRE>
-	PROCEDURE overlay_polar_sdfit
+	PROCEDURE overlay_map_sdfit
 
  :DESCRIPTION:
     Plot a 2-D scan data of a SD radar on the plot window set up by map_set.
@@ -210,22 +249,23 @@ This page was created by the IDL library routine
 
  :HISTORY:
  	2011/01/11: Created
+ 	2011/06/15: renamed to overlay_map_sdfit
 
- $LastChangedBy: horit $
- $LastChangedDate: 2011-06-10 04:23:19 +0900 (Fri, 10 Jun 2011) $
- $LastChangedRevision: 130 $
- $URL: http://gemsissc.stelab.nagoya-u.ac.jp/svn/ergsc/trunk/erg/ground/radar/superdarn/overlay_polar_sdfit.pro $;
+ $LastChangedBy: $
+ $LastChangedDate: $
+ $LastChangedRevision: $
+ $URL: $;
 </PRE><P>
-<STRONG>(See <A href="superdarn/overlay_polar_sdfit.pro">iugonet/erg_ground/radar/superdarn/overlay_polar_sdfit.pro</A>)</STRONG><P>
+<STRONG>(See <A href="superdarn/overlay_map_sdfit.pro">iugonet/erg_ground/radar/superdarn/overlay_map_sdfit.pro</A>)</STRONG><P>
 <HR>
  
-<A NAME="PLOT_POLAR_SDFIT">
-<H2>PLOT_POLAR_SDFIT</H2></A>
-<A HREF="#OVERLAY_POLAR_SDFIT">[Previous Routine]</A>
+<A NAME="PLOT_MAP_SDFIT">
+<H2>PLOT_MAP_SDFIT</H2></A>
+<A HREF="#OVERLAY_MAP_SDFIT">[Previous Routine]</A>
 <A HREF="#SD_AACGMLIB">[Next Routine]</A>
 <A HREF="#ROUTINELIST">[List of Routines]</A>
 <PRE>
- PROCEDURE plot_polar_sdfit
+ PROCEDURE plot_map_sdfit
 
  PURPOSE:
 		Draw a fan plot of SD data on the world map
@@ -249,22 +289,23 @@ This page was created by the IDL library routine
                    coordinates. Default: [0.85, 0.1, 0.87, 0.45] 
 
  :EXAMPLES:
-   plot_polar_sdfit, 'sd_hok_vlos_bothscat'
-   plot_polar_sdfit, 'sd_hok_vlos_bothscat', center_glat=70., center_glon=180. 
+   plot_map_sdfit, 'sd_hok_vlos_bothscat'
+   plot_map_sdfit, 'sd_hok_vlos_bothscat', center_glat=70., center_glon=180. 
    
  :Author:
  	Tomo Hori (E-mail: horit at stelab.nagoya-u.ac.jp)
 
  :HISTORY:
  	2011/03/11: Created
+ 	2011/06/15: Renamed to plot_map_sdfit
 
 </PRE><P>
-<STRONG>(See <A href="superdarn/plot_polar_sdfit.pro">iugonet/erg_ground/radar/superdarn/plot_polar_sdfit.pro</A>)</STRONG><P>
+<STRONG>(See <A href="superdarn/plot_map_sdfit.pro">iugonet/erg_ground/radar/superdarn/plot_map_sdfit.pro</A>)</STRONG><P>
 <HR>
  
 <A NAME="SD_AACGMLIB">
 <H2>SD_AACGMLIB</H2></A>
-<A HREF="#PLOT_POLAR_SDFIT">[Previous Routine]</A>
+<A HREF="#PLOT_MAP_SDFIT">[Previous Routine]</A>
 <A HREF="#SD_INIT">[Next Routine]</A>
 <A HREF="#ROUTINELIST">[List of Routines]</A>
 <PRE>
@@ -313,10 +354,10 @@ This page was created by the IDL library routine
  :HISTORY: 
    2010/03/10: Created
  
- $LastChangedBy: $
- $LastChangedDate: $
- $LastChangedRevision: $
- $URL: $
+ $LastChangedBy: horit $
+ $LastChangedDate: 2011-01-10 17:24:09 +0900 (Mon, 10 Jan 2011) $
+ $LastChangedRevision: 94 $
+ $URL: http://gemsissc.stelab.nagoya-u.ac.jp/svn/ergsc/trunk/erg/ground/radar/superdarn/sd_init.pro $
 </PRE><P>
 <STRONG>(See <A href="superdarn/sd_init.pro">iugonet/erg_ground/radar/superdarn/sd_init.pro</A>)</STRONG><P>
 <HR>
@@ -346,6 +387,7 @@ This page was created by the IDL library routine
     mltlabel:    set to draw the MLT labels every 2 hour. 
     lonlab:      a latitude from which (toward the poles) the MLT labels are drawn.
     force_scale:   Forcibly put a given value in "scale" of map_set.
+    stereo: Use the stereographic mapping, instead of satellite mapping (default)
 
  :EXAMPLES:
     sd_map_set 
@@ -358,8 +400,8 @@ This page was created by the IDL library routine
  	2011/01/11: Created
 
  $LastChangedBy: horit $
- $LastChangedDate: 2011-03-07 19:27:27 +0900 (Mon, 07 Mar 2011) $
- $LastChangedRevision: 122 $
+ $LastChangedDate: 2011-06-23 16:33:01 +0900 (Thu, 23 Jun 2011) $
+ $LastChangedRevision: 136 $
  $URL: http://gemsissc.stelab.nagoya-u.ac.jp/svn/ergsc/trunk/erg/ground/radar/superdarn/sd_map_set.pro $
 </PRE><P>
 <STRONG>(See <A href="superdarn/sd_map_set.pro">iugonet/erg_ground/radar/superdarn/sd_map_set.pro</A>)</STRONG><P>
@@ -430,8 +472,8 @@ This page was created by the IDL library routine
    2011/01/07: added glat to coordinate option
  
  $LastChangedBy: horit $
- $LastChangedDate: 2011-01-13 16:53:19 +0900 (Thu, 13 Jan 2011) $
- $LastChangedRevision: 98 $
+ $LastChangedDate: 2011-06-20 22:42:07 +0900 (Mon, 20 Jun 2011) $
+ $LastChangedRevision: 135 $
  $URL: http://gemsissc.stelab.nagoya-u.ac.jp/svn/ergsc/trunk/erg/ground/radar/superdarn/set_coords.pro $
 </PRE><P>
 <STRONG>(See <A href="superdarn/set_coords.pro">iugonet/erg_ground/radar/superdarn/set_coords.pro</A>)</STRONG><P>
