Modified html document files.

--- a/_udas_doc.html
+++ b/_udas_doc.html
@@ -12,7 +12,7 @@ This page was created by the IDL library routine
 <CODE>mk_html_help2</CODE>.
 <br>
 <P>
-<STRONG>Last modified: </STRONG>Tue Jun 28 13:02:22 2011.<P>
+<STRONG>Last modified: </STRONG>Tue Jul 26 01:50:31 2011.<P>
  
 <HR>
  
@@ -127,6 +127,9 @@ IUG_LOAD_EAR_TROP_NC</A>
 <LI><A HREF="iugonet/load_udas_doc_list.html#IUG_LOAD_EAR_TROP_TXT">
 IUG_LOAD_EAR_TROP_TXT</A>
 <br>Queries the Kyoto_RISH servers for the standard observation data of troposphere and stratsoohere
+<LI><A HREF="iugonet/load_udas_doc_list.html#IUG_LOAD_EISCAT">IUG_LOAD_EISCAT
+</A>
+<br>loads the EISCAT radar data.
 <LI><A HREF="iugonet/load_udas_doc_list.html#IUG_LOAD_GMAG_MM210">
 IUG_LOAD_GMAG_MM210</A>
 <LI><A HREF="iugonet/load_udas_doc_list.html#IUG_LOAD_GMAG_NIPR">
