--- a/_udas_doc.html
+++ b/_udas_doc.html
@@ -12,7 +12,7 @@ This page was created by the IDL library routine
 <CODE>mk_html_help2</CODE>.
 <br>
 <P>
-<STRONG>Last modified: </STRONG>Tue Jul 26 01:50:31 2011.<P>
+<STRONG>Last modified: </STRONG>Tue Jul 26 02:28:07 2011.<P>
  
 <HR>
  
@@ -79,6 +79,8 @@ GUI_LOAD_ACKNOWLEDGEMENT</A>
 <LI><A HREF="iugonet/examples_udas_doc_list.html#IUG_CRIB_BLR_RISH_TXT">
 IUG_CRIB_BLR_RISH_TXT</A>
 <LI><A HREF="iugonet/examples_udas_doc_list.html#IUG_CRIB_EAR">IUG_CRIB_EAR</A>
+<LI><A HREF="iugonet/examples_udas_doc_list.html#IUG_CRIB_EISCAT">
+IUG_CRIB_EISCAT</A>
 <LI><A HREF="iugonet/examples_udas_doc_list.html#IUG_CRIB_GMAG_NIPR">
 IUG_CRIB_GMAG_NIPR</A>
 <LI><A HREF="iugonet/examples_udas_doc_list.html#IUG_CRIB_GMAG_SERC">
